--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.7",
+    "react-data-table-component": "^7.4.7",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
