--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
+    "styled-components": "^5.3.3",
     "yup": "^0.32.9"
   },
   "scripts": {
