--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.4.0",
     "yup": "^0.32.9"
   },
   "scripts": {
