--- a/.eslintrc
+++ b/.eslintrc
@@ -64,6 +64,7 @@
                 "useTabs": false,
                 "endOfLine": "auto"
             }
-        ]
+        ],
+        "import/prefer-default-export": "off"
     }
 }
